<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register_outmostLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/softgray"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="100">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="20"
            android:paddingTop="10dp"
            android:src="@drawable/logo" />

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="70">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="15dp"
                android:orientation="vertical"
                android:paddingBottom="15dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingTop="0dp">

                <EditText
                    android:id="@+id/register_username"
                    style="@style/welcomeEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@mipmap/ic_person_white_24dp"
                    android:hint="@string/hint_username_activity_register"
                    android:inputType="textPersonName"
                    android:lines="1"
                    android:maxLines="1"
                    android:paddingStart="10dp"
                    android:paddingEnd="15dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

                <EditText
                    android:id="@+id/register_password1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@mipmap/ic_lock_white_24dp"
                    android:hint="@string/hint_password_activity_register"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:maxLines="1"
                    android:paddingStart="10dp"
                    android:paddingEnd="15dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

                <EditText
                    android:id="@+id/register_password2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@mipmap/ic_lock_white_24dp"
                    android:hint="@string/hint_confirm_password_activity_register"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:maxLines="1"
                    android:paddingStart="10dp"
                    android:paddingEnd="15dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="27dp"
                    android:orientation="horizontal"
                    android:weightSum="100">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="3dp"
                        android:layout_marginTop="15dp"
                        android:layout_weight="40"
                        android:background="@android:color/white" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginRight="10dp"
                        android:background="@mipmap/ic_info_outline_white_24dp"
                        android:layout_weight="60"
                        android:onClick="displayHowToPwd"
                        android:id="@+id/pwd_info" />

                </LinearLayout>

                <EditText
                    android:id="@+id/register_firstname"
                    style="@style/welcomeEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@mipmap/ic_person_outline_white_24dp"
                    android:hint="@string/hint_firstname_activity_register"
                    android:inputType="textPersonName"
                    android:lines="1"
                    android:maxLines="1"
                    android:paddingStart="10dp"
                    android:paddingEnd="15dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:weightSum="0.5" />

                <EditText
                    android:id="@+id/register_lastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@mipmap/ic_person_outline_white_24dp"
                    android:hint="@string/hint_lastname_activity_register"
                    android:inputType="textPersonName"
                    android:lines="1"
                    android:maxLines="1"
                    android:paddingStart="10dp"
                    android:paddingEnd="15dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

                <EditText
                    android:id="@+id/register_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@mipmap/ic_email_white_24dp"
                    android:hint="@string/hint_email_activity_register"
                    android:inputType="textEmailAddress"
                    android:lines="1"
                    android:maxLines="1"
                    android:paddingStart="10dp"
                    android:paddingEnd="15dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

                <EditText
                    android:id="@+id/register_number"
                    android:clickable="true"
                    android:focusable="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@mipmap/ic_call_white_24dp"
                    android:hint="@string/hint_phone_activity_register"
                    android:lines="1"
                    android:maxLines="1"
                    android:inputType="none"
                    android:onClick="showPhoneChoice"
                    android:paddingEnd="15dp"
                    android:paddingStart="10dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/rounded_buttons"
                android:onClick="onClickRegister"
                android:text="@string/sign_up_activity_register"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
