<resources>
    <string name="app_name">OpenGM</string>

    <string name="loading_dialog">Loading. Please wait &#8230;.</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="incorrect_activity_login">Invalid username or password</string>
    <string name="incorrect_password">Invalid password</string>
    <string name="invalid_password_activity_login">Password has not a correct format</string>
    <string name="login_now_activity_login">Login</string>
    <string name="forgotten_password_activity_login"><u>Forgot your password?</u></string>
    <string name="register_now_activity_login">Don\'t have any account yet? Register now</string>

...
    <string name="hint_lastname_activity_register">Last name</string>
    <string name="hint_phone_activity_register">Phone number</string>
    <string name="hint_email_activity_register">Email</string>
    <string name="hint_confirm_password_activity_register">Confirm password</string>
    <string name="sign_up_activity_register">Sign up</string>

    <string name="emtpy_username_activity_register">Username should not be empty</string>
    <string name="empty_password_activity_register">Password should not be empty</string>
    <string name="empty_email_activity_register">Email should not be empty</string>
    <string name="empty_firstname_activity_register">First name should not be empty</string>
    <string name="empty_lastname_activity_register">Last name should not be empty</string>
    <string name="incorrect_email_activity_register">Email has not a correct format</string>
    <string name="non_matching_passwords_activity_register">Passwords don\'t match</string>
    <string name="incorrect_phone_number_activity_register">A valid phone number should be entered</string>
    <string name="short_password_activity_register">Password is too short</string>
    <string name="long_password_activity_register">Password is too long</string>
    <string name="case_password_activity_register">Password should contain at least a small and a cap letter</string>
    <string name="no_letter_password_activity_register">Password should contain a letter</string>
    <string name="no_number_password_activity_register">Password should contain a number</string>
    <string name="symbol_password_activity_register">Password contains some illegal characters</string>
    <string name="taken_username_activity_register">Username %s already taken</string>
...
