<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_outmostLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/softgray"
    tools:context="ch.epfl.sweng.opengm.identification.LoginActivity">


    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="100">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="30"
            android:src="@drawable/logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="70"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="15dp"
                android:orientation="vertical"
                android:padding="15dp">

                <EditText
                    android:id="@+id/login_username"
                    style="@style/welcomeEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@mipmap/ic_person_white_24dp"
                    android:hint="@string/hint_username_activity_register"
                    android:inputType="textPersonName"
                    android:lines="1"
                    android:maxLines="1"
                    android:paddingStart="10dp"
                    android:paddingEnd="15dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />


                <EditText
                    android:id="@+id/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@mipmap/ic_lock_white_24dp"
                    android:hint="@string/hint_password_activity_register"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:maxLines="1"
                    android:paddingStart="10dp"
                    android:paddingEnd="15dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <TextView
                        android:id="@+id/textView_password_forgotten"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0.7"
                        android:onClick="onClickForgotPassword"
                        android:text="@string/forgotten_password_activity_login"
                        android:textAlignment="center"
                        android:textColor="@color/white" />

                    <Button
                        android:id="@+id/login_buttonLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_weight="0.3"
                        android:background="@drawable/rounded_buttons"
                        android:onClick="onClickLogin"
                        android:text="@string/login_now_activity_login"
                        android:textColor="@color/white"
                        android:textSize="18sp" />


                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/bluegreen"
        android:onClick="onClickRegister"
        android:text="@string/register_now_activity_login"
        android:textColor="@color/white" />


</RelativeLayout>
